<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.nextjoy.clicker.activity.MainActivity">

    <TextView
        android:id="@+id/show_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="48dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/btn1_msg"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/btn2_msg"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/btn3_msg"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/btn4_msg"
        android:textColor="#000000"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/btn5_msg"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/btn6_msg"
        android:textColor="#000000" />
    <Button
        android:id="@+id/btn7"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/btn7_msg"
        android:textColor="#000000" />
</LinearLayout>
